# opDeDe

./: .gitignore  animate_mi_train_test.py  main_mutual_info.py  main_physics_clean.py  pyproject.toml
configs/: noisy_channel.yaml
data/: testfile_t0.pkl
notebooks/: Untitled.ipynb  animated_plotting.ipynb  correlated_distributions.ipynb  detector_data_plots.ipynb  fit_mi_as_fun_of_eres.ipynb  multilayer_results.ipynb  plot_mi_input_distributions.ipynb  read_multilayer_calos.ipynb  read_multilayer_calos_photonID.ipynb  read_photon_vs_hadron_dataset.ipynb  sum_multilayer_results_pid.ipynb  toy_data_animated_demo.ipynb
results/: results.h5  results_calo.h5  results_layer.h5  results_layer_multi.h5  results_layer_sum.h5  results_random.h5  resultsrandom.h5
scripts/: evaluate_one_theta_noisy_channel_cond_minf.py  get_theta_gradient_from_minf.py  load_and_test_minf.py  orig_oneD_flow.py  plot_MI_input_distributions.py  test_1D_flow.py  test_1D_flow_copy.py  test_conditional_1D_flow.py  train_flow_surrogate.py  train_flow_surrogate_with_optimizer.py  train_one_theta_noisy_channel_plain_minf.py  train_surrogate.py  train_surrogate_with_optimizer.py  train_test_conditional_minf_with_noisy_channel.py  train_test_conditional_minf_with_noisy_channel_twotheta.py  train_test_multilayer_calo.py  train_test_multilayer_calo_sum.py  train_test_multilayer_calo_sum_vs_particleID.py  train_test_multilayer_calo_vs_particleID.py  train_test_plain_minf_with_noisy_channel_twotheta.py  train_test_toydistributions.py  train_two_theta_noisy_channel_plain_minf.py
src/: input_generator.py  (+4 more)
(+105 files in other folders)
