[build-system]
requires = ["matplotlib>=3.4.2","flit_core>=3.4","numpy>=1.21.0"]
build-backend = "flit_core.buildapi"

[project]
name = "minfnet"
version = "0.0.1"
authors = [
  { name="Kingusiu", email="kinga.wozniak@gmail.com" },
]
description = "DL-based Mutual information estimator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
#Homepage = "https://github.com/pypa/sampleproject"
#Issues = "https://github.com/pypa/sampleproject/issues"
